HIV indicator defintion fixes. Start on data sources. Start on implementation methods. Priors rewrite. More figure description.

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -147,9 +147,9 @@ In generalised settings like SSA, risk is more diffuse across the population.
 For example, in SSA adolescent girls and young women (AGYW) are a large demographic group at increased risk of HIV infection [@risher2021age; @monod2023growing] but not typically considered a KP.
 That said, concentrated subepidemics often occur within what are nominally generalised settings [@tanser2014concentrated].
 
-<!-- Practical methods for prevention prioritisation -->
-<!-- What is being done and is it working -->
-Modes of service delivery include geographic, demographic, key population services, risk screening, individual-level risk characteristics.
+<!-- Practical methods for prevention prioritisation: what is being done and is it working -->
+Various methods can be used to implement differentiatated HIV treatment and prevention services.
+These include geographic and demographic prioritisation, key population services, and risk screening based on individual-level risk characteristics.
 
 ## HIV surveillance {#surveillance}
 
@@ -159,17 +159,17 @@ Surveillance can used to track epidemic indicators, identify at-risk populations
 Important indicators include:
 
 * **HIV prevalence** is the proportion $\rho \in [0, 1]$ of a population who have HIV.
-The number of PLHIV is given by $N\rho$, where $N$ is the population size.
+The number of PLHIV is given by $N\rho$, where $N$ is the (living) population size.
 Increases in HIV prevalence, or the number of PLHIV, can be caused by either new HIV infections or more PLHIV remaining alive by taking treatment.
 For this reason care must be taken in directly interpreting changes in HIV prevalence.
 As a key measure of population disease burden, HIV prevalence is used to calculate all of the other indicators given below.
 
-* **HIV incidence** is the rate $\lambda \in \mathbb{R}$ of new HIV infections, often written as number of new infections per 1000 person years.
-HIV incidence can be specified in terms of the change in HIV prevalence, taking into account the mortality rate.
+* **HIV incidence** is the rate $\lambda > 0$ of new HIV infections, often written as number of new infections per 1000 person years.
+The number of new HIV infections that occur during a given time is the integral of HIV incidence multiplied by the size of the susceptible population.
 Let $\rho_t$ be the HIV prevalence, and $N_t$ be the population size, at time $t$.
-Then the number of new HIV infections is given by
+Then the number of new HIV infections which occur in a given period of time are given by
 $$
-\int \lambda_t \cdot (1 - \rho_t) \cdot N_t \text{d}t.
+I = \int \lambda_t \cdot (1 - \rho_t) \cdot N_t \text{d}t.
 $$
 Planning, delivery, and evaluation of prevention programming relies on estimates of HIV incidence and the number of new HIV infections.
 
@@ -185,13 +185,25 @@ Programming of HIV testing and diagnosis is informed by awareness of status.
 
 ### Data
 
-Data are used to estimate the above HIV indicators.
-These data are integrated with prior scientific knowledge.
+Data are used to estimate the above HIV indicators, in conjunction with scientific knowledge.
 Multiple sources of data are used:
 
-* **Household surveys**
-* **Programmatic data**
-* **Cohort studies**
+* **Household surveys** are large, national cross-sectional studies.
+The Demographic and Health Surveys (DHS) Program.
+Population-based HIV Impact Assessments (PHIA).
+Household surveys provide nationally-representative high quality standardised data about HIV.
+
+* **Programmatic data** refer to data routinely collected during delivery of health services.
+Examples include data from antenatal care (ANC) HIV testing and ART service delivery.
+Programmatic data are more regularly available than other data sources.
+However, the control that can be exercised over collection of programmatic data is limited.
+As a result, issues of data quality and reliability, as well as bias, are common in working with programmatic data.
+
+* **Cohort studies** follow a group of people over time.
+Outcomes may be measured more systematically in a cohort study than in other study designs.
+The data from cohort studies are used to inform otherwise difficult to estimate epidemiological parameters.
+Examples of such parameters include disease progression and mortality rates, transmission dynamics, and treatment outcomes.
+Population-based cohort studies relevant to the SSA setting include Manicaland, Zimbabwe [@gregson2006hiv]; Rakai, Uganda [@grabowski2017hiv].
 
 <!-- Discuss methods for HIV testing -->
 
@@ -204,26 +216,31 @@ The most significant difficulties faced are:
 Collection of data is costly and time consuming.
 As a result, limited direct data might be available for the particular time, location, or population of interest.
 For example, in many countries the last conducted household survey is several years out of date.
-4. **Missing data**:
+
+2. **Missing data**:
 The sampling frame of a survey may not correspond to the target population.
 For example, many KPs are difficult to reach, and may be omitted from sampling frames.
 Individuals included on the sampling frame may choose not to respond.
 All surveys are subject to sampling error, as only a subset of the target population are sampled.
 Each of these issues can be characterised as being problems of missing data.
 I characterise missing data as referring to the shortfalls of any given study, and data sparsity as referring to limited availability of studies. 
+
 3. **Response and measurement biases**:
 Individuals may be hesitant to disclose their HIV status, or report higher risk behaviours, due to social desirability bias or a fear of discrimination or stigma.
 When available, biomarker data can be used to overcome under-reporting, but still may be subject to measurement errors.
+
 4. **Denominators and demography**:
 Many indicators are rates or proportions, which rely on estimates of the population at risk in the denominator.
 Accurately estimating population denominators is itself a challenging task [@tatem2017worldpop].
 Taking a ratio of uncertain quantities amplifies uncertainty, but is rarely properly accounted for.
+
 5. **Inconsistent data collection and reporting**:
 The types of data that are collected might vary across space and time.
 Reporting protocols or definitions can also change.
+
 6. **Reliance on epidemiological parameters**:
 Indicators rely on estimates of epidemiological parameters such as rates of disease progression.
-These parameters are typically obtained from cohort studies and may not generalise to the setting of interest.
+These parameters may not generalise to the setting of interest.
 Further, they are typically applied coarsely, and without proper accounting for uncertainty.
 
 ### Statistical approaches
@@ -235,12 +252,15 @@ Careful statistical modelling is required to overcome these limitations as best 
 When little direct data are available, data judged to be indirectly related can be used to help improve estimation.
 For example, if limited data are available for individuals of a certain age, it is likely reasonable to make use of data for individuals of a similar age.
 As well as over age groups, information can be borrowed between and within countries, and across times.
+
 2. **Evidence synthesis**:
 Multiple sources of evidence can be combined to overcome the limitations of any one data source.
 For example, infrequently run household surveys can be complemented by more up-to-date programmatic data.
+
 3. **Expert guidance**:
 Expert epidemiological, demographic, and local stakeholder guidance can be used to improve estimates.
 Ensuring the quality of any data used in the estimation process is essential.
+
 4. **Uncertainty quantification**:
 Conclusions drawn by synthesising multiple incomplete data sources are unlikely to be firm and unanimous.
 It is therefore particularly that the uncertainties inherent to any statistical analysis are accurately and transparently presented.
