--- a/references.bib
+++ b/references.bib
@@ -1665,7 +1665,7 @@ doi = {10.1201/9781420072884-c30}
 }
 
 @article{nandi2023disaggregation,
-  title={disaggregation: An R Package for Bayesian Spatial Disaggregation Modeling},
+  title={{disaggregation: An R Package for Bayesian Spatial Disaggregation Modeling}},
   author={Nandi, Anita K and Lucas, Tim CD and Arambepola, Rohan and Gething, Peter and Weiss, Daniel J},
   journal={Journal of Statistical Software},
   volume={106},
@@ -2160,3 +2160,30 @@ doi = {10.1201/9781420072884-c30}
   publisher={LWW}
 }
 
+@article{goldstein2006subjective,
+  title={Subjective Bayesian analysis: principles and practice},
+  author={Goldstein, Michael},
+  year={2006}
+}
+
+@article{gregson2006hiv,
+  title={HIV decline associated with behavior change in eastern Zimbabwe},
+  author={Gregson, Simon and Garnett, Geoffrey P and Nyamukapa, Constance A and Hallett, Timothy B and Lewis, James JC and Mason, Peter R and Chandiwana, Stephen K and Anderson, Roy M},
+  journal={Science},
+  volume={311},
+  number={5761},
+  pages={664--666},
+  year={2006},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{grabowski2017hiv,
+  title={HIV prevention efforts and incidence of HIV in Uganda},
+  author={Grabowski, M Kate and Serwadda, David M and Gray, Ronald H and Nakigozi, Gertrude and Kigozi, Godfrey and Kagaayi, Joseph and Ssekubugu, Robert and Nalugoda, Fred and Lessler, Justin and Lutalo, Thomas and others},
+  journal={New England Journal of Medicine},
+  volume={377},
+  number={22},
+  pages={2154--2166},
+  year={2017},
+  publisher={Mass Medical Soc}
+}
